# KaggleTitanic

./: Titanic.py  pyproject.toml
